--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
-  <script src="main.js"></script>
 </head>
 
-<div class="container">
-  <h1 class="heading" data-target-resolver></h1>
-</div>
+<body>
+  <div class="container">
+    <h1 class="heading" data-target-resolver></h1>
+  </div>
+  <script src="main.js"></script>
+</body>
